plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.person'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'org.postgresql:r2dbc-postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//mongo
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
}

tasks.named('test') {
	useJUnitPlatform()

	filter {
		includeTestsMatching "com.person.project.domain.usecase.person.*"
		includeTestsMatching "com.person.project.domain.usecase.personbootcamp.*"
		includeTestsMatching "com.person.project.infraestructure.adapters.persistenceadapter.person.*"
		includeTestsMatching "com.person.project.infraestructure.adapters.persistenceadapter.personbootcamp.*"
		includeTestsMatching "com.person.project.infraestructure.adapters.persistenceadapter.webclient.*"
		includeTestsMatching "com.person.project.infraestructure.adapters.persistenceadapter.mongodb.*"
		includeTestsMatching "com.person.project.infraestructure.entrypoints.person.handler*"
		includeTestsMatching "com.person.project.infraestructure.entrypoints.personbootcamp.handler*"
	}
}
